[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/objects/items/wood/wood_frame.png" type="Texture" id=1]
[ext_resource path="res://assets/objects/items/wood/wood_item.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/items/wood/WoodItem.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 14.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bounce/Item:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bounce/Frame:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bounce/Frame:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bounce:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "bounce"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bounce:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3 ) ]
}

[node name="WoodItem" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="Bounce" type="Node2D" parent="."]

[node name="Frame" type="Sprite" parent="Bounce"]
modulate = Color( 1, 1, 1, 0.172549 )
texture = ExtResource( 1 )

[node name="Item" type="Sprite" parent="Bounce"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationFrame" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="AnimationWoodItem" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/bounce = SubResource( 5 )

[node name="Spawn" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_WoodItem_body_entered"]
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
